tests/baselines/reference/overloadsInDifferentContainersDisagreeOnAmbient.errors.txt
tests/cases/compiler/overloadsInDifferentContainersDisagreeOnAmbient.ts(7,21): error TS2384: Overload signatures must all be ambient or non-ambient.


==== tests/cases/compiler/overloadsInDifferentContainersDisagreeOnAmbient.ts (1 errors) ====
    declare module M {
        // Error because body is not ambient and this overload is
        export function f();
    }
    
    module M {
        export function f() { }
                        ~
!!! error TS2384: Overload signatures must all be ambient or non-ambient.
    }